[package]
name = "tor-client-lib"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tor", "cryptography"]
categories = ["command-line-interface", "cryptography"]
description = "A client library for the Tor API"

[[bin]]
name = "tor-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0.72"
base32 = "0.4.0"
base64 = "0.21.2"
curve25519-dalek = "4.1.0"
ed25519-dalek = { version = "2.0.0", features = ["pkcs8", "serde", "signature", "pem", "hazmat", "rand_core"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
regex = "1.9.3"
repl-rs = "0.2.7"
rpassword = "7.2.0"
rsa = "0.9.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["base64"] }
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
tokio = { version = "1.31.0", features = ["io-std", "net", "io-util", "macros", "parking_lot", "test-util", "rt", "rt-multi-thread"] }
tokio-socks = "0.5.1"
tokio-util = { version = "0.7.8", features = ["codec"] }
